# FinanceRedisProject

./: .gitignore  CMakeLists.txt  Containerfile  README.md  area_branch.json  connection.json  docker-compose.yml  download_packages.sh  generate_cmake.sh  org.cpp  run.sh
.cursor/rules/: cpp-programming-guidelines-cursorrules-prompt-file.mdc
cmake/: ConfigureTests.cmake  GlobalOptions.cmake
deploy/: finance-quota-pod.yml
deploy/pod_data/redis/conf/: redis.conf  users.acl
deploy/pod_data/service/conf/: connection.json
lib/: boost  hiredis  poco
src/: CMakeLists.txt
src/application/: FinanceService.cpp  FinanceService.h  FinanceService.hpp
src/common/: FinanceUtils.hpp
src/domain/: Error.hpp  FinanceDataStructure.h  FinanceDataStructure.hpp  FinanceDataStructures.h  FinanceUtils.hpp  IFinanceRepository.h  IFinanceRepository.hpp  IPackageHandler.h  IPackageHandler.hpp  IPacketHandler.h  IRedisClient.h  Result.hpp  Status.h
src/entry/: main.cpp
src/infrastructure/config/: AreaBranchAdapter.cpp  AreaBranchAdapter.h  AreaBranchProvider.cpp  AreaBranchProvider.hpp  ConfigAdapter.hpp  ConnectionConfigProvider.hpp  JsonProviderBase.hpp
src/infrastructure/logging/: ILogger.h  LoguruLogger.cpp  LoguruLogger.h
src/infrastructure/network/: FinanceBillHandler.cpp  FinanceBillHandler.h  FinancePackageHandler.cpp  FinancePackageHandler.h  FinancePackageHandler.hpp  Hcrtm01Handler.hpp  Hcrtm05pHandler.hpp  PacketQueue.cpp  PacketQueue.h  RingBuffer.h  RingBuffer.hpp  TcpServiceAdapter.cpp  TcpServiceAdapter.h  TcpServiceAdapter.hpp  TransactionHandler.hpp
src/infrastructure/storage/: AreaBranchAdapter.cpp  AreaBranchAdapter.h  ConfigAdapter.cpp  ConfigAdapter.h  RedisClient.cpp  RedisClient.h  RedisClient.hpp  RedisPlusPlusClient.cpp  RedisPlusPlusClient.h  RedisPlusPlusClient.hpp  RedisSummaryAdapter.cpp  RedisSummaryAdapter.h  RedisSummaryAdapter.hpp
src/infrastructure/tasks/: RedisTask.hpp  RedisWorker.hpp
src/utils/: FinanceUtils.hpp  LogHelper.hpp
tests/: CMakeLists.txt  FinanceUtilsTest.cpp  ResultTest.cpp  RingBufferTest.cpp  SummaryDataCaculateTest.cpp  basic_test.cpp
tests/network/: RingBufferTest.cpp
